[tool.poetry]
name = "gilbert"
version = "0.4.2"
description = "A simple, extensible static site generator."
readme = "README.md"
authors = ["Curtis Maloney <curtis@tinbrain.net>"]
license = "MIT"
documentation = "https://gilbert.readthedocs.io/en/latest/"
repository = "https://github.com/funkybob/gilbert"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3.1"
markdown = "^3.2.1"
libsass = "^0.19.4"
inotify = "^0.2.10"
stencil-template = "^4.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
sphinx = "^2.4.4"
pytest = "^5.4.1"
pytest-mock = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[scripts]
gilbert = "gilbert.cli:main"
