[tool.poetry]
name = "gilbert"
version = "0.5.0"
description = "A simple, extensible static site generator."
readme = "README.md"
authors = ["Curtis Maloney <curtis@tinbrain.net>"]
license = "MIT"
documentation = "https://gilbert.readthedocs.io/en/latest/"
repository = "https://github.com/funkybob/gilbert"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3.1"
markdown = "^3.2.1"
libsass = "^0.19.4"
stencil-template = "^4.2.1"
aionotify = "^0.2.0"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
sphinx = "^2.4.4"
pytest = "^5.4.1"
pytest-mock = "^2.0.0"

[tool.poetry.scripts]
gilbert = "gilbert.cli:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

