[flake8]
ignore =
        # Prefer line breaks before binary operators
        W503
max-line-length = 119
statistics = True

[metadata]
name = gilbert
version = 0.0.1
description = A simple, extensible static site generator.

[options]
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    stencil-template
    pyyaml
    markdown2
    PySCSS

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    gilbert=gilbert.cli:main
