[flake8]
ignore =
        # Prefer line breaks before binary operators
        W503
max-line-length = 119
statistics = True

[metadata]
name = gilbert
version = 0.1.0
description = A simple, extensible static site generator.

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    =src
install_requires =
    pyyaml
    markdown2
    PySCSS
    inotify
    stencil-template

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    gilbert=gilbert.cli:main
