[flake8]
ignore =
        # Prefer line breaks before binary operators
        W503
max-line-length = 119
statistics = True

[metadata]
name = gilbert
version = 0.3.4
description = A simple, extensible static site generator.
url = https://gilbert.readthedocs.io/en/latest/
long_description = A simply static site generator.

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    =src
install_requires =
    pyyaml
    markdown
    libsass
    inotify
    stencil-template

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    gilbert=gilbert.cli:main
